--- a/gecktuss_game/style.css
+++ b/gecktuss_game/style.css
@@ -130,3 +130,17 @@ button:hover { background-color: rgb(120, 120, 120); }
 }
 
 
+
+
+
+#krev2{
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  display: block;
+
+  img{
+    width: 80px;
+  }
+}
